--- a/Views/Shared/_ProgressFlowChart.cshtml
+++ b/Views/Shared/_ProgressFlowChart.cshtml
@@ -14,6 +14,9 @@
     </div>
 </div>
 
+<!-- White background overlay for content below flowchart -->
+<div class="content-background-overlay"></div>
+
 <style type="text/css">
     .progress-flowchart {
         display: flex;
